force-app/main/default/objects/Unidade__c/Unidade__c.object-meta.xml
<CustomObject>
    <description>Um apartamento ou vaga de garagem de um prédio vendido ou disponível para compra por uma construtora</description>
    <label>Unidade</label>
    <nameField>
        <label>Código da Unidade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>