force-app/main/default/objects/Unidade__c/fields/AndarExibicao__c.field-meta.xml
<CustomField>
    <fullName>AndarExibicao__c</fullName>
    <label>Andar de exibição</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>