force-app/main/default/objects/Unidade__c/fields/AreaComum__c.field-meta.xml
<CustomField>
    <fullName>AreaComum__c</fullName>
    <label>Área coumm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>