force-app/main/default/objects/Unidade__c/fields/AreaTotal__c.field-meta.xml
<CustomField>
    <fullName>AreaTotal__c</fullName>
    <label>Área total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>