force-app/main/default/objects/Unidade__c/fields/Banheiros__c.field-meta.xml
<CustomField>
    <fullName>Banheiros__c</fullName>
    <label>Banheiros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>