force-app/main/default/objects/Unidade__c/fields/DataCompra__c.field-meta.xml
<CustomField>
    <fullName>DataCompra__c</fullName>
    <label>Data da compra</label>
    <type>Date</type>
</CustomField>