force-app/main/default/objects/Unidade__c/fields/DataEntregaChaves__c.field-meta.xml
<CustomField>
    <fullName>DataEntregaChaves__c</fullName>
    <label>Data da entrega de chaves</label>
    <type>Date</type>
</CustomField>