force-app/main/default/objects/Unidade__c/fields/Dormitorios__c.field-meta.xml
<CustomField>
    <fullName>Dormitorios__c</fullName>
    <label>Dormitórios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>