force-app/main/default/objects/Unidade__c/fields/Suites__c.field-meta.xml
<CustomField>
    <fullName>Suites__c</fullName>
    <label>Suítes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>