force-app/main/default/objects/Unidade__c/fields/TipoUnidade__c.field-meta.xml
<CustomField>
    <fullName>TipoUnidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de Unidade</label>
    <referenceTo>TipoUnidade__c</referenceTo>
    <relationshipLabel>Unidades</relationshipLabel>
    <relationshipName>Unidades</relationshipName>
    <type>Lookup</type>
</CustomField>