force-app/main/default/objects/Unidade__c/fields/Torre__c.field-meta.xml
<CustomField>
    <fullName>Torre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Torre</label>
    <referenceTo>Torre__c</referenceTo>
    <relationshipLabel>Unidades</relationshipLabel>
    <relationshipName>Unidades</relationshipName>
    <type>Lookup</type>
</CustomField>