force-app/main/default/objects/Unidade__c/fields/VagasCarros__c.field-meta.xml
<CustomField>
    <fullName>VagasCarros__c</fullName>
    <label>Vagas para carros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>