force-app/main/default/objects/Unidade__c/fields/VagasMotos__c.field-meta.xml
<CustomField>
    <fullName>VagasMotos__c</fullName>
    <label>Vagas para motos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>