force-app/main/default/objects/Unidade__c/validationRules/RelacionametosMesmoEmpreendimento.validationRule-meta.xml
<ValidationRule>
    <fullName>RelacionametosMesmoEmpreendimento</fullName>
    <active>true</active>
    <description>Verifica se a Torre e o Tipo de Unidade tem o mesmo empreendimento que a undiade</description>
    <errorConditionFormula>Torre__r.Empreendimento__c &lt;&gt; Empreendimento__c ||
TipoUnidade__r.Empreendimento__c &lt;&gt; Empreendimento__c</errorConditionFormula>
    <errorMessage>A torre e o tipo de unidade devem estar associados ao mesmo empreendimento</errorMessage>
</ValidationRule>